--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,10 @@
-.singleCard *{
+.singleCard * {
     display: inline;
+}
+
+.home_font {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 2rem !important;
 }
